Connecting to keen for query.

--- a/sd-keen-vis.html
+++ b/sd-keen-vis.html
@@ -25,6 +25,9 @@ REPLACE THIS TEXT WITH A COMPONENT DESCRIPTION
     <style include="sd-keen-vis-styles"></style>
     <a href="javascript:" on-click="handleClick">Click here to increment counter:</a>
     <span>{{counterValue}}</span>
+    <div id="keen-board"></div>
   </template>
 </dom-module>
+
+<script src="./bower_components/keen-js/dist/keen-query.js"></script>
 <script src="dist/sd-keen-vis.js"></script>
