--- a/demo/index.html
+++ b/demo/index.html
@@ -37,7 +37,14 @@
       <!-- Component ---------------------------------------------------------->
       <px-demo-component>
         <sd-keen-vis
-          counter-value="{{props.counterValue.value}}">
+          counter-value="{{props.counterValue.value}}"
+          project="58b083098db53dfda8a88bcf"
+          read-key="f9cbef55-18d4-440d-9dbf-f89baf9c0df2"
+          collection="s3_seshat.datasd.org_logs"
+          analysis-type="count"
+          time-frame="this_14_days"
+          interval="daily"
+        >
         </sd-keen-vis>
       </px-demo-component>
       <!-- END Component ------------------------------------------------------>
