Reworking timings for running keen query.

--- a/demo/index.html
+++ b/demo/index.html
@@ -42,7 +42,7 @@
           read-key="f9cbef55-18d4-440d-9dbf-f89baf9c0df2"
           collection="s3_seshat.datasd.org_logs"
           analysis-type="count"
-          time-frame="this_14_days"
+          timeframe="this_14_days"
           interval="daily"
         >
         </sd-keen-vis>
