--- a/demo/index.html
+++ b/demo/index.html
@@ -10,6 +10,7 @@
 <link rel="import" href="../../px-demo/px-demo-props.html" />
 <link rel="import" href="../../px-demo/px-demo-interactive.html" />
 <link rel="import" href="../../px-demo/px-demo-component-snippet.html" />
+<link rel="import" href="../../px-simple-area-chart/px-simple-area-chart.html" />
 
 <!-- Imports for this componnent -->
 <link rel="import" href="../../px-demo/css/px-demo-styles.html" />
@@ -46,6 +47,9 @@
           interval="daily"
         >
         </sd-keen-vis>
+        <!--<px-simple-area-chart prevent-resize="true" width="700" height="450" x-axis-type="time"
+            chart-data='[{"x":"1493276400","y2":23,"y1":30,"y":56},{"x":1397139660000,"y2":20,"y1":35,"y":40},{"x":1397177400000,"y2":28,"y1":40,"y":43},{"x":1397228040000,"y2":25,"y1":38,"y":33},{"x":1397248260000,"y2":26,"y1":33,"y":47},{"x":1397291280000,"y2":30,"y1":40,"y":41},{"x":1397318100000,"y2":32,"y1":30,"y":26},{"x":1397342100000,"y2":28,"y1":35,"y":42},{"x":1397390820000,"y2":35,"y1":40,"y":27},{"x":1397408100000,"y2":35,"y1":34,"y":38},{"x":1397458800000,"y2":40,"y1":38,"y":36},{"x":1397522940000,"y2":35,"y1":40,"y":32}]'
+            series-config='{"fistSeries":{"name":"First","x":"x","y":"y","yAxisUnit":"bofs"},"secondSeries":{"name":"Second","x":"x","y":"y1","yAxisUnit":"bofs"},"thirdSeries":{"name":"Third","x":"x","y":"y2","yAxisUnit":"bofs"}}'></px-simple-area-chart>-->
       </px-demo-component>
       <!-- END Component ------------------------------------------------------>
 
