Clean up init order.

--- a/sd-keen-vis.html
+++ b/sd-keen-vis.html
@@ -55,11 +55,11 @@ REPLACE THIS TEXT WITH A COMPONENT DESCRIPTION
         event-config='{}'
         threshold-data='[]'
         threshold-config='{}'
-        x-axis-config='{"title":"Date"}'
+        x-axis-config='{"title":"Date", "tickFormat": "%m-%d"}'
         y-axis-config='[[ chartYTitle ]]'
         dynamic-menu-config='[]'
         toolbar-config='{"config":{"advancedZoom":false,"pan":true,"tooltip":true}}'
-        navigator-config='{"xAxisConfig":{"tickFormat":"%b %d"}}'>
+        navigator-config='{"xAxisConfig":{"tickFormat":"%m-%d"}}'>
     </px-vis-timeseries>
   </template>
 </dom-module>
