Better yaxis config component name.

--- a/sd-keen-vis.html
+++ b/sd-keen-vis.html
@@ -56,7 +56,7 @@ REPLACE THIS TEXT WITH A COMPONENT DESCRIPTION
         threshold-data='[]'
         threshold-config='{}'
         x-axis-config='{"title":"Date", "tickFormat": "%m-%d"}'
-        y-axis-config='[[ chartYTitle ]]'
+        y-axis-config='[[ chartYAxisConfig ]]'
         dynamic-menu-config='[]'
         toolbar-config='{"config":{"advancedZoom":false,"pan":true,"tooltip":true}}'
         navigator-config='{"xAxisConfig":{"tickFormat":"%m-%d"}}'>
