--- a/sd-keen-vis.html
+++ b/sd-keen-vis.html
@@ -49,7 +49,9 @@ REPLACE THIS TEXT WITH A COMPONENT DESCRIPTION
         register-config='{}'
         selection-type="xy"
         chart-data='[[ chartData ]]'
-        series-config='{"y":{"name":"hits","x":"x","y":"y"}}'
+        series-config='{"y":{"name":"hits","x":"x","y":"y"},
+        "ObjectCreated:Putdsd/permits_issued_ytd_datasd.csv": {"name": "s", "x":"x",
+        "y":"ObjectCreated:Putdsd/permits_issued_ytd_datasd.csv"}}'
         chart-extents='{"x":["dynamic","dynamic"],"y":["dynamic","dynamic"]}'
         event-data='[]'
         event-config='{}'
