--- a/demo/index.html
+++ b/demo/index.html
@@ -42,9 +42,10 @@
           read-key="f9cbef55-18d4-440d-9dbf-f89baf9c0df2"
           collection="s3_seshat.datasd.org_logs"
           analysis-type="count"
-          group-by='["log.key", "eventMeta.eventName"]'
+          group-by='["log.key"]'
           timeframe="this_14_days"
           interval="daily"
+          axis-extents='{"x":["dynamic","dynamic"],"y":[0,250]}'
         >
         </sd-keen-vis>
 
